<resources>
    <string name="app_name" translatable="false">Minibar Control</string>
    <string name="app_short_name">Minibar</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="change_language" >Change language</string>
    <string name="english" translatable="false">English</string>
    <string name="thai" translatable="false">ภาษาไทย</string>

    <string name="pin_header_title">Login</string>
    <string name="pin_title">Enter your passcode</string>
    <string name="help">Help</string>

    <string name="verify_title">Enter your licence code</string>
    <string name="verify_hint">licence code</string>

    <string name="code_fail">Verification failed</string>
    <string name="close">Close</string>
    <string name="code_not_found">Licence code not found</string>

    <string name="verify_header_title">Verify Licence</string>
    <string name="confirm">Confirm</string>
    <string name="signin">Sign In</string>
    <string name="exit">" Exit application"</string>
    <string name="signout">Sign out</string>
    <string name="settings">Settings</string>
    <string name="current_version">Current Version</string>
    <string name="language">Language</string>
</resources>
