<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>

    <group android:id="@+id/signin_group">
        <item
            android:id="@+id/menu_signout"
            android:icon="@drawable/ic_input"
            android:title="@string/signout" />
    </group>

    <group android:id="@+id/unsignin_group">
        <item
            android:id="@+id/menu_exit"
            android:icon="@drawable/ic_power_settings_new"
            android:title="@string/exit" />
    </group>

</menu>
